Fix body vertical alignment

--- a/sass/error.scss
+++ b/sass/error.scss
@@ -6,5 +6,5 @@
 
 body {
     @apply bg-white flex items-center justify-center
-        min-h-screen py-48;
+        min-h-screen h-full my-auto;
 }
